--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,8 @@ h1, h2, h3, h4, h5{
   border: 1px solid black;
   background: rgba(0,0,0,0.05);
 }
+
+.infoContainer{
+  display: grid;
+  grid-template-columns: 400px 400px
+}
